[package]
name = "lockrs"
version = "0.1.0"
edition = "2024"
authors = ["Lance Borden <lanceaborden@protonmail.com>"]
license = "MIT"

[dependencies]
as-raw-xcb-connection = "1.0.1"
pam = "0.8.0"
xcb = { version = "1.7.0", features = ["xkb"] }
xkbcommon = { version = "0.9.0", features = ["x11"] }
cairo-sys-rs = "0.20"
cairo-rs = { version = "0.20", features = ["xcb"] }
